--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
     <div itemprop="text">
-    <p>The area between the armpit and chest is called the Axilla. Axillary fat, involving the axilla (also, armpit, underarm or oxter) is associated with the axillary lymph nodes. Human's have 20 and 49 armpit lymph nodes, which drain lymph vessels from the lateral quadrants of the breast. The term "underarm" only refers to the outer surface of the axilla. The axilla also contains sweat glands, responsible for the formation of body odor.</p>
+    <p>Officially the best stoner shirt for men and women ever. Do you love ganja edibles, smoking weed, support legalized marijuana or cultivate cannabis at home, and want a cool grow diary wearable? Look no further! Our weed tees are also great for gifting to marijuana growers, or those who roll joints and love that chilled pothead vibe. The unique weed smoker, cannabis leaf, pot head dream artwork. Enjoy!</p>
     </div>
     <h3>Be the envy of all your pot head friends! Check out our #1 selling design here... <a href="https://www.amazon.com/dp/B096VTGVM7">Cannabis T-Shirt</a>.</h3>
     
